Gutted template to manually override collapsing bug. Added more anchor tags to contact page.

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -12,3 +12,7 @@ a:hover {
 	margin-right: 0;
 	margin-left: 0;
 }
+
+.contact-link:hover {
+	text-decoration: none;
+}
